# dlibapp

./: .gitmodules  CMakeLists.txt  README.md  clienthandler.cpp  clienthandler.h  config.cpp  config.h  config.json  facedetector.cpp  facedetector.h  imageviewerform.cpp  imageviewerform.h  imageviewerform.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pathmatcher.cpp  pathmatcher.h  pathmatchertest.cpp  pathmatchertest.h  server.cpp  server.h  sonar-project.properties
